EDM-2893: cancel imagebuild/imageexport
